:smirk: url list

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/tabstyles.css" />
 		<link rel="stylesheet" type="text/css" href="css/rehabtab.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<script type="text/javascript" src="todo.js"></script>
+
 	</head>
 	<body>
 		<div class="container" style="min-width: 500px;">
@@ -22,10 +24,42 @@
 					</nav>
 					<div class="content-wrap">
 						<section id="section-linemove-1">
-              <p>Websites you must ignore! You fucking lazy!</p>
-              <p></p>
+
+							<div class="container">
+						    <div class="row">
+						        <div class="col-md-6">
+						            <div class="todolist">
+						             <h1>Blacklisted urls papi</h1>
+						                <input type="text" id="todo" class="form-control" placeholder="Add url">
+						                <button href="" id="add" class="btn btn-success">Add</button>
+						                <hr>
+						                <ul id="todoList" class="list-unstyled">
+
+						            	</ul>
+						            </div>
+						        </div>
+						    </div>
+						</div>
+
 						</section>
-						<section id="section-linemove-2"><p>2</p></section>
+						<section id="section-linemove-2">
+							<div class="container">
+						    <div class="row">
+						        <div class="col-md-6">
+						            <div class="todolist">
+						             <h1>Whitelisted urls papi</h1>
+						                <input type="text" id="todo" class="form-control" placeholder="Add url">
+						                <button href="" id="add" class="btn btn-success">Add</button>
+						                <hr>
+						                <ul id="todoList" class="list-unstyled">
+
+						            	</ul>
+						            </div>
+						        </div>
+						    </div>
+						</div>
+
+							</section>
 					</div><!-- /content -->
 				</div><!-- /tabs -->
 			</section>
